--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "slidev build",
     "dev": "slidev --open",
-    "export": "slidev export"
+    "export": "slidev export",
+    "deploy:cf": "npm run build && npx wrangler pages deploy"
   },
   "dependencies": {
     "@slidev/cli": "^52.9.1",
