feat(slides): add biohydrogen section and update technology comparison table
- Integrate dark fermentation, photofermentation, and microalgae-based hydrogen production
  pathways with relevant references and illustrative content
- Include a new summary slide comparing major hydrogen production technologies,
  covering efficiency, TRL, CAPEX, application scenarios, and key bottlenecks
- Add reference citations for ALK, PEM, AEM, and biohydrogen sections to improve
  source traceability and academic rigor
- Remove outdated PEM "noble metal" cost slide to streamline presentation flow
- Update gitignore to exclude generated markdown files and PDF outputs

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ slides-export.pptx
 ref.md
 speech.md
 references.md
+*.pdf
+氢气生产技术的全面综述、途径及应用，以推进全球可持续能源目标.md
+《全球蓝绿氢燃料生产技术、趋势及至 2050 年未来展望综述》.md
+review.md
+refs.md
